--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	<application android:icon="@+drawable/icon" android:label="@+string/app_name"
+        android:theme="@+style/OpenDataKit" android:allowBackup="true" >
 		<uses-library android:name="com.android.future.usb.accessory" />
 
 		<activity android:name=".ui.activity.ActivityLauncher">
