--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
 	<application android:icon="@+drawable/icon" android:label="@+string/app_name"
         android:theme="@+style/OpenDataKit" android:allowBackup="true" >
-		<uses-library android:name="com.android.future.usb.accessory" />
+		<!-- <uses-library android:name="com.android.future.usb.accessory" /> -->
 
 		<activity android:name=".ui.activity.ActivityLauncher">
 			<intent-filter>
