--- a/project.properties
+++ b/project.properties
@@ -9,3 +9,6 @@
 
 # Project target.
 target=android-16
+android.library.reference.3=../../odk-survey/opendatakit.playservices
+android.library.reference.1=../../odk-survey/opendatakit.androidcommon
+android.library.reference.2=../../odk-survey/opendatakit.actionbarsherlock
