--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionCode="1" android:versionName="2.0 alpha" package="org.opendatakit.sensors">
-	<uses-sdk android:minSdkVersion="12" />
+	android:versionCode="127" 
+	android:versionName="2.0" 
+	package="org.opendatakit.sensors">
+	<uses-sdk android:minSdkVersion="16" />
 
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
