--- a/sensorsframework_app/build.gradle
+++ b/sensorsframework_app/build.gradle
@@ -67,5 +67,13 @@ dependencies {
         debugCompile(group: groupId, name: commonArtifactName, version: commonSnapshot, ext: 'aar')
     }
 
+    if (playServicesPath.exists() && gradle.useLocal) { // Local project is favoured
+        compile project(playServicesName)
+    } else {
+        releaseCompile(group: groupId, name: playServicesArtifactName, version: playServicesRelease, ext: 'aar')
+        snapshotCompile(group: groupId, name: playServicesArtifactName, version: playServicesSnapshot, ext: 'aar')
+        debugCompile(group: groupId, name: playServicesArtifactName, version: playServicesSnapshot, ext: 'aar')
+    }
+
     testCompile 'junit:junit:4.12'
 }
