--- a/sensorsframework_app/src/main/AndroidManifest.xml
+++ b/sensorsframework_app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
 		android:protectionLevel="signature" />
 	<uses-permission android:name="org.opendatakit.database.RUN_DATABASE" />
 
-	<application android:icon="@+drawable/icon" android:label="@+string/app_name"
-        android:theme="@+style/OpenDataKit" android:allowBackup="true" >
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+        android:theme="@style/Opendatakit" android:allowBackup="true" >
 		<uses-library android:name="com.android.future.usb.accessory" />
 
 		<activity android:name=".ui.activity.ActivityLauncher">
@@ -43,9 +43,6 @@
 		<activity android:name=".bluetooth.ui.SensorBtSelectionActivity"></activity>
 		<activity android:name=".usb.ui.SensorUsbSelectionActivity"></activity>
 		<activity android:name=".usb.ui.SensorUsbSelectionHelpActivity"></activity>
-		<provider android:authorities="org.opendatakit.sensors.usbsensordataprovider"
-			android:name=".contentprovider.SensorContentProvider">
-		</provider>
 		<service android:exported="true" android:name=".service.SensorService">
 		</service>
 
