--- a/sensorsframework_app/build.gradle
+++ b/sensorsframework_app/build.gradle
@@ -29,6 +29,10 @@ android {
 //        multiDexEnabled true
     }
 
+	jacoco {
+        version = jacocoVersionName
+    }
+	
     buildTypes {
         release {
             minifyEnabled(minify)
