Update gradle config: build variants

--- a/sensorsinterfaces_lib/build.gradle
+++ b/sensorsinterfaces_lib/build.gradle
@@ -28,12 +28,27 @@ android {
         versionName(versionCodeName)
     }
 
+    productFlavors {
+        demo {
+        }
+
+        master {
+        }
+
+        snapshot {
+        }
+
+        uitests {
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled(minify)
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
         debug {
+            debuggable(true)
             testCoverageEnabled(testCoverage) // Allows AndroidTest JaCoCo reports to be generated
         }
     }
