--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,13 @@ allprojects {
     repositories {
         jcenter()
         ivy {
-            url 'http://cwe.cs.washington.edu:8082/artifactory/libs-release/'
+            url 'http://cwe.cs.washington.edu:8082/artifactory/libs-demo/'
+        }
+        ivy {
+            url 'http://cwe.cs.washington.edu:8082/artifactory/libs-master/'
+        }
+        ivy {
+            url 'http://cwe.cs.washington.edu:8082/artifactory/libs-snapshot/'
         }
     }
 }
