--- a/sensorsframework_app/build.gradle
+++ b/sensorsframework_app/build.gradle
@@ -25,16 +25,29 @@ android {
         targetSdkVersion(targetVersion)
         versionCode(releaseVersionCode)
         versionName(versionCodeName)
-
-//        multiDexEnabled true
     }
-	
+
+    productFlavors {
+        demo {
+        }
+
+        master {
+        }
+
+        snapshot {
+        }
+
+        uitests {
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled(minify)
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
         debug {
+            debuggable(true)
             testCoverageEnabled(testCoverage) // Allows AndroidTest JaCoCo reports to be generated
         }
     }
@@ -66,18 +79,29 @@ dependencies {
     if (libraryProjectPath.exists() && gradle.useLocal) { // Local project is favoured
         compile project(libraryProjectName)
     } else {
-        compile(group: groupId, name: libraryArtifactName,
-                version: (useLatestLibrary ? latestVersion : librarySnapshot), ext: 'aar')
+        demoCompile(group: groupId, name: libraryDemoArtifactName, classifier: demoRelease,
+                version: latestVersion, ext: 'aar')
+        masterCompile(group: groupId, name: libraryDemoArtifactName, classifier: masterRelease,
+                version: latestVersion, ext: 'aar')
+        snapshotCompile(group: groupId, name: libraryDemoArtifactName, classifier: snapshotRelease,
+                version: latestVersion, ext: 'aar')
+        uitestCompile(group: groupId, name: libraryDemoArtifactName, classifier: uitestRelease,
+                version: latestVersion, ext: 'aar')
     }
 
     if (commonProjectPath.exists() && gradle.useLocal) { // Local project is favoured
         compile project(commonProjectName)
     } else {
-        compile(group: groupId, name: commonArtifactName,
-                version: (useLatestCommon ? latestVersion : commonSnapshot), ext: 'aar')
+        demoCompile(group: groupId, name: commonDemoArtifactName, classifier: demoRelease,
+                version: latestVersion, ext: 'aar')
+        masterCompile(group: groupId, name: commonDemoArtifactName, classifier: masterRelease,
+                version: latestVersion, ext: 'aar')
+        snapshotCompile(group: groupId, name: commonDemoArtifactName, classifier: snapshotRelease,
+                version: latestVersion, ext: 'aar')
+        uitestCompile(group: groupId, name: commonDemoArtifactName, classifier: uitestRelease,
+                version: latestVersion, ext: 'aar')
     }
 
-    compile 'com.google.android.gms:play-services:' + gpsVersion
     compile project(":sensorsinterfaces_lib")
 
     androidTestCompile 'junit:junit:4.12'
