--- a/sensorsframework_app/build.gradle
+++ b/sensorsframework_app/build.gradle
@@ -117,7 +117,18 @@ dependencies {
                       classifier: snapshotRelease, version: latestVersion, ext: 'aar')
     }
 
-    compile project(":sensorsinterfaces_lib")
+    if (sensorsInterfaceProjectPath.exists() && gradle.useLocal) { // Local project is favoured
+        compile project(sensorsInterfaceProjectName)
+    } else {
+        demoCompile(group: groupId, name: sensorsInterfaceArtifactName, classifier: demoRelease,
+                version: latestVersion, ext: 'aar')
+        masterCompile(group: groupId, name: sensorsInterfaceArtifactName, classifier: masterRelease,
+                version: masterArtifactVersion, ext: 'aar')
+        snapshotCompile(group: groupId, name: sensorsInterfaceArtifactName,
+                classifier: snapshotRelease, version: latestVersion, ext: 'aar')
+        uitestCompile(group: groupId, name: sensorsInterfaceArtifactName,
+                classifier: snapshotRelease, version: latestVersion, ext: 'aar')
+    }
 
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support:support-v4:23.1.0'
