--- a/settings.gradle
+++ b/settings.gradle
@@ -1,21 +1,21 @@
-gradle.ext.gradleConfigVersion = 51
+gradle.ext.gradleConfigVersion = 52
 
 if (!gradle.ext.has('workspacePath')) {
     def env = System.getProperties();
-    logger.warn("sensors/settings.gradle System.getProperties().stringPropertyNames(): " + env
+    logger.warn("sensorsframework/settings.gradle System.getProperties().stringPropertyNames(): " + env
             .stringPropertyNames());
     def path = System.getProperty('com.android.studio.gradle.project.path');
     if (path != null) {
-        logger.warn("sensors/settings.gradle Found value for System.getProperty('com.android" +
+        logger.warn("sensorsframework/settings.gradle Found value for System.getProperty('com.android" +
                 ".studio.gradle.project.path')");
         gradle.ext.workspacePath = (new File(path)).getParentFile().getAbsolutePath();
     } else {
-        logger.warn("sensors/settings.gradle No value found for System.getProperty('com.android.studio.gradle.project.path')");
+        logger.warn("sensorsframework/settings.gradle No value found for System.getProperty('com.android.studio.gradle.project.path')");
         gradle.ext.workspacePath = new File("..").getAbsolutePath();
     }
 }
 
-logger.warn('sensors/settings.gradle -- gradle.ext.workspacePath: ' + gradle.ext.workspacePath)
+logger.warn('sensorsframework/settings.gradle -- gradle.ext.workspacePath: ' + gradle.ext.workspacePath)
 
 gradle.ext.local = gradle.ext.workspacePath + '/gradle-config/remote.gradle'
 gradle.ext.remote = 'https://raw.githubusercontent.com/opendatakit/gradle-config/' + gradle.ext.gradleConfigVersion + '/remote.gradle'
