--- a/sensorsframework_app/build.gradle
+++ b/sensorsframework_app/build.gradle
@@ -131,10 +131,9 @@ dependencies {
                 classifier: snapshotRelease, version: latestVersion, ext: 'aar')
     }
 
-    androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-v4:25.1.0'
-
     // Testing dependencies
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test:runner:0.5'
+	androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support:support-annotations:25.1.0'
 }
