--- a/sensorsframework_app/src/main/AndroidManifest.xml
+++ b/sensorsframework_app/src/main/AndroidManifest.xml
@@ -5,9 +5,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <permission
-            android:name="org.opendatakit.database.RUN_DATABASE"
-            android:protectionLevel="signature" />
+
+    <!-- this is defined in org.opendatakit.services -->
     <uses-permission android:name="org.opendatakit.database.RUN_DATABASE" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name"
