--- a/sensorsframework_app/build.gradle
+++ b/sensorsframework_app/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     // Testing dependencies
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
 	androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support:support-annotations:25.3.1'
 }
