--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,15 @@ buildscript {
 		}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.4'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
         ivy {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-demo/'
         }
@@ -23,9 +25,6 @@ allprojects {
         ivy {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-snapshot/'
         }
-		maven {
-			url 'https://maven.google.com'
-		}	
     }
 }
 
