--- a/sensorsframework_app/build.gradle
+++ b/sensorsframework_app/build.gradle
@@ -139,8 +139,15 @@ dependencies {
 
     // Testing dependencies
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.0'
-    androidTestImplementation'com.android.support.test:rules:1.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation'com.android.support.test:rules:1.0.1'
 	androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support:support-annotations:25.4.0'
+    androidTestImplementation 'com.android.support:support-annotations:27.1.0'
+}
+
+task grantPermissionForODKApp () {
+    doLast {
+        grantServicesReadExternalStoragePermission.execute()
+        grantServicesWriteExternalStoragePermission.execute()
+    }
 }
