--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,11 @@
 buildscript {
     repositories {
         jcenter()
-		maven {
-			url 'https://maven.google.com'
-		}
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.4'
+        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.7.0'
     }
 }
 
